# embedded_tools

./: .gitignore  CMakeLists.txt  README.md  adrian_clock.hpp  adrian_debounced_button.hpp  adrian_helpers.hpp  debounced_button.hpp  run_tests.sh
containers/: adrian_fixed_heap.hpp  adrian_fixed_list.hpp  array_test.cpp
docs/: doc_preview.txt  ps2.md
examplePS2/: examplePS2.ino
examples/examplePS2/: adrian_dualshock_cpp.ino  examplePS2.ino
ext/: SoftSPI.cpp  spi_master_redbear.hpp
gamecube/: gamecube.md
gpio/: adrian_gpio.hpp  adrian_gpio_arduino.hpp
n64/: adrian_n64_console.hpp  adrian_n64_controller.hpp  adrian_single_wire.hpp  adrian_single_wire_arduino.hpp  n64.md
ps2/: adrian_dualshock.cpp  adrian_dualshock.hpp  build_docs.sh  ps2.html  ps2.md
spi/: SoftSPI.h  adrian_spi.hpp  adrian_spi_arduino.hpp  adrian_spi_redbear.hpp  adrian_spi_softspi.hpp  adrian_spi_trinket.hpp
tasks/: adrian_task_scheduler.cpp
tests/: CMakeLists.txt  adrian_debounced_button_test.cpp  adrian_debounced_button_test_1.cpp  adrian_dualshock_test.cpp  adrian_dualshock_test_1.cpp  adrian_fixed_list_test.cpp  adrian_helpers_test.cpp  adrian_helpers_test_1.cpp  debounced_button_test_1.cpp
tests/mocks/: adrian_gpio_mock.hpp  adrian_spi_mock.hpp
